--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "browser-sync start --server 'www' --files  --files 'www'",
+    "start": "browser-sync start --server 'web' --files  --files 'web'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
